--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
 
 <header> 
 
-<a href="index.html"><img src="images/repair.png" alt="MobileShop logo"/></a>
+<a href="index.html"><img src="images/Repair.png" alt="MobileShop logo"/></a>
 
 </header> 
 
