--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
 
 <header> 
 
-	<a href="index.html"><img src="images/repair.png" alt="MobileShop logo"/></a>
+	<a href="index.html"><img src="images/Repair.png" alt="MobileShop logo"/></a>
 
 </header> 
 
@@ -38,12 +38,24 @@
 	</ul>
 	
 	<figure>
-			<img src= "images/bomb1.jpg" alt= "View of Charlotte Buildings" />
+			<img src= "images/bomb1.jpg" alt= "placing speaker in iphone" />
 	</figure>	
 	<figure>
-			<img src= "images/bomb.jpg" alt= "View of Train Station" />
+			<img src= "images/bomb.jpg" alt= "view of worker" />
 	</figure>
-
+	
+<h3>Front screen replacement Prices</h3>
+		<table>
+	  <tr>
+		<th>Iphone 6</th>
+		<th>Iphone 7</th>
+	  </tr>
+	  <tr>
+		<td> $46</td>
+		<td>$56</td>
+	  </tr> 
+	</table>
+	
 </nav> 
 	 
 <article id = "main"> 
@@ -89,10 +101,10 @@
 
 <h3></h3>
 	<figure>
-		<img src= "images/wow1.jpg" alt= "wow" />
+		<img src= "images/wow1.jpg" alt= "worker" />
 	</figure>
 	<figure>
-		<img src= "images/wow.jpg" alt= "wow" />
+		<img src= "images/wow.jpg" alt= "phone tools" />
 	</figure>
 
 </aside>   
