--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <header> 
 
-<a href="index.html"><img src="images/repair.png" alt="MobileShop logo"/></a>
+<a href="index.html"><img src="images/Repair.png" alt="MobileShop logo"/></a>
 
 </header> 
 
@@ -47,9 +47,9 @@
 	
 <h3>Why Us?</h3>
 	<p>Our technicians will fix your broken iPhone, iPad, computer or other device so that it works as good as new. Plus, our services are fast, so you won’t be without your device for long!</p>
- <h4> </h4>
+ 
 		<figure>
-			<iframe width="439.41" height="247.4955" src="https://www.youtube.com/embed/DLgoGIlcvcU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="439" height="247" src="https://www.youtube.com/embed/DLgoGIlcvcU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</figure>
 </figure>
 
